separando a logica de autenticação do serviço de gerenciamento de usuário
